# TwinForge

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Aether-Semantic-Context-Engine-DESIGN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  detailed implementation doc.md  docker-compose.yml  homography.py  pyproject.toml  requirements-dev.txt  requirements-npu.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.impeccable/: design.json
capture/: aruco.py  scaniverse.py
capture/android/: README.md  settings.gradle.kts
capture/android/app/: build.gradle.kts
capture/android/app/src/main/: AndroidManifest.xml
capture/android/app/src/main/java/com/dragverse/capture/: Frames.kt  MainActivity.kt  NpzWriter.kt  Uploader.kt
capture/android/app/src/main/java/com/twinforge/capture/: Frames.kt  MainActivity.kt  NpzWriter.kt  Uploader.kt
capture/android/app/src/main/res/layout/: activity_main.xml
capture/service/: app.py  store.py
configs/: default.yaml
dashboard/: DESIGN.md  PRODUCT.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/.impeccable/: design.json
dashboard/src/: App.jsx  Console.jsx  Floorplan.jsx  JobFeed.jsx  Landing.jsx  Preloader.jsx  ReconCanvas.jsx  Stage.jsx  Telemetry.jsx  aperture.js  api.js  modify_console.js  recon.js  router.jsx  styles.css  useReveal.js
dashboard/src/recon/: geometry.js  labels.js  lighting.js  materials.js  pipeline.js  planner.js  pointcloud.js
dashboard/src/wizard/steps/: ModelStep.jsx  VoiceStep.jsx
deployment/aihub_export/: export_script.py  profile_models.py
deployment/qairt/: convert.py
docker/: Dockerfile.capture  Dockerfile.orchestrator  Dockerfile.semantic  docker-compose.yml
docs/: THIRD_PARTY_LICENSES.md
docs/api/: openapi.yaml
docs/architecture/: overview.md
docs/papers/: references.md
docs/superpowers/plans/: 2026-07-18-dragverse-v2-implementation.md  2026-07-18-twinforge-v2-implementation.md  2026-07-19-dragverse-v3-blueprint-delta.md  2026-07-19-twinforge-v3-blueprint-delta.md
docs/superpowers/specs/: 2026-07-19-recon-canvas-3d-upgrade-design.md
examples/factory/: scenario.yaml
examples/hospital/: scenario.yaml
examples/museum/: scenario.yaml
examples/warehouse/: scenario.yaml
k8s/: README.md
orchestrator/: db.py  jobs.py  pipeline.py  service.py
output/: H_camA.json  world_map_camA_meta.json
policy/: evaluate.py
policy/baselines/: README.md
policy/finetune/: train_bc.py
policy/rl/: bridge.py  config.py
reconstruction/: reconstruct.py
reconstruction/fast_path/: fusion.py
reconstruction/fidelity_path/: pipeline.py
robot/: policy_runner.py
robot/adapters/: base.py  registry.py  sim.py  unoq.py
sarvam/: ai_model.py  assistant.py  test_model.py
sarvam/task_engine/: fallback.py  graph.py  provider.py  sarvam_provider.py  whisper_fallback.py
sdk/dragverse/: __init__.py  __main__.py  client.py
sdk/twinforge/: __init__.py  __main__.py  capture.py  client.py  deploy.py  reconstruct.py  train.py
semantic/service/: app.py  inference.py
src/twinforge/: __main__.py
tests/: test_aruco.py  test_capture.py  test_capture_import.py  test_db.py  test_deployment.py  test_main.py  test_orchestrator.py  test_policy.py  test_profile_models.py  test_reconstruction.py  test_rl_bridge.py  test_rl_config.py  test_robot.py  test_scaniverse.py  test_sdk.py  test_semantic.py  test_task_engine.py  test_transcribe.py  test_twin.py
twin/: Buggy.onnx  buggy_motor_controller.ino  generator.py  inference.py
twin/rules/: mapping.yaml
twin/unity_project/: README.md
twin/unity_project/Assets/Editor/: TwinGenerator.cs
