[build-system]
requires = ["setuptools>=69.0", "wheel>=0.42"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "twinforge"
version = "0.1.0"
description = "TwinForge — end-to-end digital twin pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "TwinForge Team"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["sdk"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --cov=sdk --cov=orchestrator --cov=capture/service --cov=semantic/service --cov=reconstruction --cov=robot/adapters --cov=sarvam/task_engine --cov-report=term-missing"

[tool.coverage.run]
branch = true
