[metadata]
name = twinforge
version = 0.1.0
description = TwinForge project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/twinforge/twinforge
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
max-line-length = 100
extend-ignore = E203, W503

[aliases]
test = pytest
dist = clean build sdist bdist_wheel
